--- a/xp-observer.html
+++ b/xp-observer.html
@@ -17,4 +17,4 @@ This class is used to provide object observing functionalities.
 -->
 
 <link rel="import" href="../expandjs/expandjs.html">
-<script src="dist/xp-observer.js"></script>
+<script src="dist/xp-observer.min.js"></script>
