--- a/xp-observer.html
+++ b/xp-observer.html
@@ -11,6 +11,7 @@ This class is used to provide object observing functionalities.
 
 @class xp-observer
 @description This class is used to provide object observing functionalities.
+@group functionality
 @homepage http://www.expandjs.com/classes/xp-observer
 
 @dependency expandjs ExpandJS/expandjs
