--- a/xp-observer.html
+++ b/xp-observer.html
@@ -11,6 +11,7 @@ This class is used to provide object observing functionalities.
 
 @class xp-observer
 @description This class is used to provide object observing functionalities.
+@keywords nodejs, web app, javascript, expandjs, web-components
 @group functionality
 @homepage http://expandjs.com/classes/xp-observer
 
