--- a/xp-observer.html
+++ b/xp-observer.html
@@ -10,7 +10,7 @@ The complete set of contributors may be found at https://expandjs.github.io/CONT
 This class is used to provide object observing functionalities.
 
 @class xp-observer
-@description This class is used to provide object observing functionalities.
+@description This class is used to provide object observing functionalities
 @keywords nodejs, web app, javascript, expandjs, web-components
 @group functionality
 @homepage http://expandjs.com/classes/xp-observer
