- Added mat-progress - Added mat-spinner - Improved xp-pressed-behavior - Major documentation improvements - Minor bug fixes - Moved multi selection from xp-selected-behavior to xp-multi-select-behavior

--- a/xp-observer.html
+++ b/xp-observer.html
@@ -14,6 +14,7 @@ This class is used to provide object observing functionalities.
 @keywords nodejs, web app, javascript, expandjs, web-components
 @group functionality
 @homepage http://expandjs.com/classes/xp-observer
+@repository https://github.com/ExpandJS/xp-observer
 
 @dependency expandjs ExpandJS/expandjs#0.9.5
 -->
