--- a/xp-observer.html
+++ b/xp-observer.html
@@ -7,18 +7,19 @@ The complete set of contributors may be found at https://expandjs.github.io/CONT
 -->
 
 <!--
-This class is used to provide object observing functionalities.
+A class used to provide object observing.
 
 @class xp-observer
-@description This class is used to provide object observing functionalities
-@keywords nodejs, web app, javascript, expandjs, web-components
+@description A class used to provide object observing
+@keywords nodejs, web app, javascript, expandjs, custom elements, web-components
 @group functionality
+
 @homepage http://expandjs.com/classes/xp-observer
 @repository https://github.com/ExpandJS/xp-observer
 
-@dependency expandjs ExpandJS/expandjs#0.9.11
+@dependency expandjs ExpandJS/expandjs#0.10.0
 -->
 
 <link rel="import" href="../expandjs/expandjs.html">
 
-<script src="dist/xp-observer.js"></script>
+<script src="dist/xp-observer.min.js"></script>
