--- a/xp-observer.html
+++ b/xp-observer.html
@@ -22,4 +22,4 @@ A class used to provide object observing.
 
 <link rel="import" href="../expandjs/expandjs.html">
 
-<script src="dist/xp-observer.min.js"></script>
+<script src="dist/xp-observer.js"></script>
